# tcp-request

./: Cargo.toml  README.md  readme.md
sh/: init.sh
src/: cfg.rs  lib.rs
src/common/: const.rs  type.rs
src/constant/: type.rs
src/request/: mod.rs  trait.rs  type.rs
src/request/common/: trait.rs  type.rs
src/request/config/: impl.rs  struct.rs  type.rs
src/request/error/: enum.rs  impl.rs  type.rs
src/request/request/: impl.rs  struct.rs  type.rs
src/request/request_builder/: impl.rs  struct.rs  test.rs  type.rs
src/request/tcp_request/: impl.rs  struct.rs
src/response/: mod.rs  trait.rs  type.rs
src/response/common/: trait.rs  type.rs
src/response/response_binary/: impl.rs  type.rs
src/response/response_text/: impl.rs  type.rs
tests/: mod.rs
tests/request_builder/: fn.rs
