[package]
name = "tcp-request"
version = "1.11.6"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """A Rust library for sending raw TCP requests, with features for handling responses, managing redirects, and working with compressed data over TCP connections."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/ltpp-universe/tcp-request.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",    
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
http-type = "3.0.2"
lombok-macros = "1.7.3"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"